// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots shareables/Footer/PageControls component 1`] = `
<div
  style={
    Object {
      "background": "#333",
      "padding": 10,
    }
  }
>
  <div
    className="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
    style={
      Object {
        "margin": "0 12px",
      }
    }
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Previous Page"
        className="euiButtonIcon euiButtonIcon-isDisabled euiButtonIcon--ghost euiButtonIcon--empty euiButtonIcon--xSmall"
        data-test-subj="pageControlsPrevPage"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
          className="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowLeft"
          size="m"
        >
          
        </span>
      </button>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        className="euiButtonEmpty euiButtonEmpty--ghost euiButtonEmpty--small"
        data-test-subj="pageControlsCurrentPage"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="euiButtonContent euiButtonEmpty__content"
        >
          <span
            className="euiButtonEmpty__text"
          >
            <div
              className="euiText euiText--small"
            >
              <div
                className="euiTextColor euiTextColor--ghost"
                style={Object {}}
              >
                Page 
                1
                 of 10
              </div>
            </div>
          </span>
        </span>
      </button>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Next Page"
        className="euiButtonIcon euiButtonIcon--ghost euiButtonIcon--empty euiButtonIcon--xSmall"
        data-test-subj="pageControlsNextPage"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
          className="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowRight"
          size="m"
        >
          
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots shareables/Footer/PageControls contextual: austin 1`] = `
<div
  className="kbnCanvas"
  style={
    Object {
      "background": "#333",
      "height": undefined,
      "overflow": "hidden",
      "padding": 10,
      "position": "relative",
      "width": undefined,
    }
  }
>
  <div
    className="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
    style={
      Object {
        "margin": "0 12px",
      }
    }
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Previous Page"
        className="euiButtonIcon euiButtonIcon-isDisabled euiButtonIcon--ghost euiButtonIcon--empty euiButtonIcon--xSmall"
        data-test-subj="pageControlsPrevPage"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
          className="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowLeft"
          size="m"
        >
          
        </span>
      </button>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        className="euiButtonEmpty euiButtonEmpty--ghost euiButtonEmpty--small"
        data-test-subj="pageControlsCurrentPage"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="euiButtonContent euiButtonEmpty__content"
        >
          <span
            className="euiButtonEmpty__text"
          >
            <div
              className="euiText euiText--small"
            >
              <div
                className="euiTextColor euiTextColor--ghost"
                style={Object {}}
              >
                Page 
                1
                 of 28
              </div>
            </div>
          </span>
        </span>
      </button>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Next Page"
        className="euiButtonIcon euiButtonIcon--ghost euiButtonIcon--empty euiButtonIcon--xSmall"
        data-test-subj="pageControlsNextPage"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
          className="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowRight"
          size="m"
        >
          
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots shareables/Footer/PageControls contextual: hello 1`] = `
<div
  className="kbnCanvas"
  style={
    Object {
      "background": "#333",
      "height": undefined,
      "overflow": "hidden",
      "padding": 10,
      "position": "relative",
      "width": undefined,
    }
  }
>
  <div
    className="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
    style={
      Object {
        "margin": "0 12px",
      }
    }
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Previous Page"
        className="euiButtonIcon euiButtonIcon-isDisabled euiButtonIcon--ghost euiButtonIcon--empty euiButtonIcon--xSmall"
        data-test-subj="pageControlsPrevPage"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
          className="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowLeft"
          size="m"
        >
          
        </span>
      </button>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        className="euiButtonEmpty euiButtonEmpty--ghost euiButtonEmpty--small"
        data-test-subj="pageControlsCurrentPage"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="euiButtonContent euiButtonEmpty__content"
        >
          <span
            className="euiButtonEmpty__text"
          >
            <div
              className="euiText euiText--small"
            >
              <div
                className="euiTextColor euiTextColor--ghost"
                style={Object {}}
              >
                Page 
                1
                 of 28
              </div>
            </div>
          </span>
        </span>
      </button>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Next Page"
        className="euiButtonIcon euiButtonIcon--ghost euiButtonIcon--empty euiButtonIcon--xSmall"
        data-test-subj="pageControlsNextPage"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
          className="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowRight"
          size="m"
        >
          
        </span>
      </button>
    </div>
  </div>
</div>
`;
